Fixed a bug that was happening when opening a dropdown menu that was too close to the bottom of the view area. Only the part that would be visible was being created, so when I scrolled down the page the menu was not 'complete'. Changing this.top = false to this.top = true changed the behaviour to be as it would always on top of page, drawing the whole component even though it is not completely visible. This way, when scrolling down the page, we could see the rest of the component as it should be.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
-  "name": "@innologica/vue-dropdown-menu",
+  "name": "@jprustv/vue-dropdown-menu",
   "version": "0.1.4",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/jprustv/node-wifi.git"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  },
   "scripts": {
     "lint": "vue-cli-service lint",
     "lib": "vue-cli-service build --target lib --name vue-dropdown-menu ./src/index.js",
